# Spyder

./: CMakeLists.txt  README.md  imgui.ini
include/: arm.h  arm.md  body.h  body.md  camera.h  controller.h  cube.h  game.h  get_path.h  ik.md  imgui.ini  keys.h  material.h  plane.h  position.h  property_manager.h  resource_manager.h  shader.h
include/glad/: glad.h
libs/glfw3/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw3/docs/: context.dox
libs/glfw3/examples/: Makefile  cmake_install.cmake
libs/glfw3/src/: Makefile  cmake_install.cmake
libs/glfw3/tests/: Makefile  cmake_install.cmake
resources/objects/amongus/: untitled.mtl
resources/shaders/: camera_vs.glsl
src/: game.cpp  get_path.cpp  imgui.ini  main.cpp  position.cpp  property_manager.cpp  resource_manager.cpp
